⚙️ تحسين مرونة الجدول + دعم التكبير والتصغير بحرية + تحديث واجهة الطلبات

--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -2,14 +2,14 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=0.5, user-scalable=yes">
   <title>الطلبات - نظام المراد</title>
   <style>
 html, body {
   touch-action: manipulation;
   -ms-touch-action: manipulation;
   zoom: 1;
-  overflow-x: hidden; /* ✅ هنا التعديل الجديد */
+overflow-x: auto; /* ✅ حتى يبقى الجدول مرن ويتكيّف مع التكبير والتصغير */
 }
 
 
