--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -2,16 +2,17 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=10.0, minimum-scale=0.25, user-scalable=yes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=10.0, minimum-scale=0.2, user-scalable=yes">
   <title>الطلبات - نظام المراد</title>
   <style>
 html, body {
-  touch-action: pinch-zoom;   /* ✅ السماح بالتكبير باللمس */
-  -ms-touch-action: pinch-zoom;
-  overflow-x: auto;
-  overflow-y: auto;
-  zoom: 1;
+  touch-action: auto !important; /* 🔥 السماح الكامل للـ pinch zoom */
+  -ms-touch-action: auto;
+  overflow: auto !important;
+  overscroll-behavior: contain;
 }
+
+
 
 
 
@@ -69,14 +70,48 @@ input, select, textarea, button {
       border-radius: 6px;
       border: 1px solid #ccc;
     }
-   .table-container {
+ .table-container {
   width: 100%;
-  overflow-x: auto;
-  overflow-y: auto; /* ✅ يسمح بالتمرير العمودي */
+  overflow: auto; /* ✅ يسمح بالتحريك بكل الاتجاهات */
+  -webkit-overflow-scrolling: touch; /* ✅ تمرير سلس بالموبايل */
   white-space: nowrap;
   padding: 10px;
-  max-height: 80vh; /* ✅ يخلي الجدول ضمن ارتفاع الشاشة */
+  max-height: none;
 }
+html, body {
+  height: 100%;
+  overflow: auto;
+  touch-action: pan-x pan-y pinch-zoom !important;
+  -ms-touch-action: pan-x pan-y pinch-zoom !important;
+  overscroll-behavior: contain;
+  transform-origin: 0 0;
+}
+
+.table-container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  padding: 10px;
+  max-height: none;
+}
+
+table {
+  width: max-content;
+  min-width: 100%;
+  transform-origin: 0 0;
+  touch-action: pan-x pan-y;
+}
+
+table {
+  touch-action: pan-x pan-y;
+}
+body {
+  transform-origin: 0 0;
+  touch-action: pan-x pan-y pinch-zoom !important; /* 🔥 يسمح بالسحب والتكبير الحر */
+}
+
 thead th {
   position: sticky;
   top: 0;
@@ -190,9 +225,39 @@ input, select, textarea {
     touch-action: manipulation;
   }
 }
+/* ✅ تمكين الزوم الحر والسحب مثل Google Sheets */
+html, body {
+  height: 100%;
+  overflow: auto !important;
+  touch-action: manipulation !important;
+  -ms-touch-action: manipulation !important;
+  transform-origin: 0 0;
+  overscroll-behavior: contain;
+}
+
+.table-container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  padding: 10px;
+  max-height: none;
+  transform-origin: 0 0;
+}
+
+/* 👇 هذا السطر يخلي الجدول يتعامل مع اللمس كأنه Google Sheets */
+table {
+  width: max-content;
+  min-width: 100%;
+  border-collapse: collapse;
+  transform-origin: 0 0;
+  touch-action: pinch-zoom pan-x pan-y !important;
+}
 
   </style>
 </head>
+
 <body>
 
   <header id="pageTitle">📦 الطلبات</header>
